Modificações e novos testes para a APi
